[gd_scene load_steps=3 format=3 uid="uid://bu0x1kus2q71b"]

[ext_resource type="Script" path="res://source/utility/interactionSource.gd" id="1_hyx6p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nx7a8"]
radius = 48.0

[node name="InteractionSource" type="Area2D"]
script = ExtResource("1_hyx6p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nx7a8")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
